--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kozhindev/steroids-gii",
+    "name": "steroids/gii",
     "description": "",
     "license": "MIT",
     "require": {
@@ -7,13 +7,7 @@
         "ext-mbstring": "*",
         "ext-curl": "*",
         "lib-pcre": "*",
-        "yiisoft/yii2": "^2.0",
-        "yiisoft/yii2-swiftmailer": "^2.1",
-        "yiisoft/yii2-debug": "^2.1",
-        "notamedia/yii2-sentry": "^1.3",
-        "yiisoft/yii2-gii": "^2.0",
-        "phpunit/phpunit": "5.7.19",
-        "doctrine/annotations": "^1.6"
+        "steroids/core": "*"
     },
     "autoload": {
         "psr-4": {"steroids\\gii\\": "backend"}
